tests/ui/nll/user-annotations/issue-57731-ascibed-coupled-types.stderr
error: lifetime may not live long enough
  --> $DIR/issue-57731-ascibed-coupled-types.rs:16:5
   |
LL | fn cast_coupled_wilds_rhs<'a>(_x: &'a u32, s: &'static u32) -> &'static u32 {
   |                           -- lifetime `'a` defined here
LL |     let ((y, _z),) = ((s, _x),) as (PairCoupledTypes<_>,);
LL |     y
   |     ^ returning this value requires that `'a` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/issue-57731-ascibed-coupled-types.rs:21:5
   |
LL | fn cast_coupled_regions_rhs<'a>(_x: &'a u32, s: &'static u32) -> &'static u32 {
   |                             -- lifetime `'a` defined here
LL |     let ((y, _z),) = ((s, _x),) as (PairCoupledRegions<_>,);
LL |     y
   |     ^ returning this value requires that `'a` must outlive `'static`

error: aborting due to 2 previous errors

